# MAI_OS

./: README.md
CP/: CMakeLists.txt  config.ini  main.cpp
lab_1_os/: CMakeLists.txt  child.c  parent.c
lab_2_os/: CMakeLists.txt  main.c
lab_3_os/: CMakeLists.txt  child.c  parent.c
lab_5-7_os/MAI_OS/Desktop/MAI_OS/lab_5-7_os/: CMakeLists.txt  message.cpp  server.cpp
lab_5-7_os/MAI_OS/Desktop/MAI_OS/lab_5-7_os/headers/: message.h
